# mfgtools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING.CPOL  CPOL.htm  Doxyfile  Doxyfile.in  LICENSE  README.md  README.txt  SBOM.spdx.json  SCR-mfgtools.txt  appveyor.yml  d.txt  index.html  libusb.prop  mfgtool_src_extract.sh  params.json
.github/scripts/: build_linux.sh  build_macos.sh  build_windows.bat  common_functions.sh
.github/workflows/: build.yaml  build_arm.yaml  build_old_ubuntu.yaml  build_wrapper.yaml  doc.yaml  macOS.yaml  tar.yaml  win.yaml
Apps.Net/BitInit/: BitInit.csproj  BitInit.sln  Program.cs
Apps.Net/DeviceApi/: AboutBox.Designer.cs  AboutBox.cs  DeviceApi.csproj  DeviceApi.sln  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs
Apps.Net/DeviceEnum/: DeviceEnum.csproj  DeviceEnum.inf  DeviceEnum.sln  FormPersistence.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs  Resources.resx  ToolStripRadioButtonMenuItem.cs  UpgradeLog.XML  ViewProfile.cs
Apps.Net/LiveUpdaterExample/: LiveUpdaterExample.csproj  LiveUpdaterExample.sln  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs
Apps.Net/MfgTool/: App.xaml  App.xaml.cs  ConfigureUsbDlg.xaml  ConfigureUsbDlg.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MfgTool.csproj  MfgTool.sln
Apps.Net/UniversalUpdater/: AboutBox.cs  AboutBox.designer.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Operation.cs  Program.cs  UniversalUpdater.csproj  UniversalUpdater.sln  app.config
Apps.Net/Updater/: AboutBox.Designer.cs  AboutBox.cs  Copy of app.config  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs  Settings.cs  Updater.csproj  Updater.sln
Apps/ApiEngine/: ApiEngine.cpp  ApiEngine.h  ApiEngine.rc  ApiEngine.sln  ApiEngine.vcproj  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
Apps/BitBurner/: BitBurner.cpp  BitBurner.h  BitBurner.rc  BitBurner.sln  BitBurner.vcproj  BitBurnerDlg.cpp  BitBurnerDlg.h  Register.xsd  StOtpRegs3700.cpp  StOtpRegs3700.h  resource.h  stdafx.cpp  stdafx.h
Apps/BitInit/: BitInit.cpp  BitInit.sln  BitInit.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h
Apps/DeviceApi/: ApiListCtrl.cpp  ApiListCtrl.h  AttachDataDlg.cpp  AttachDataDlg.h  CmdDataDlg.cpp  CmdDataDlg.h  DeviceApi.cpp  DeviceApi.h  DeviceApi.rc  DeviceApi.sln  DeviceApi.vcproj  DeviceApiDlg.cpp  DeviceApiDlg.h  OverwriteEdit.cpp  OverwriteEdit.h  ParamDlg.cpp  ParamDlg.h  ReadMe.txt  changelog.txt  resource.h  src_extract.bat  stdafx.cpp  stdafx.h
Apps/DeviceEnum/: AddFilterDlg.cpp  AddFilterDlg.h  DeviceEnum.cpp  DeviceEnum.h  DeviceEnum.rc  DeviceEnum.sln  DeviceEnum.vcproj  DeviceEnumDlg.cpp  DeviceEnumDlg.h  DeviceTreeCtrl.cpp  DeviceTreeCtrl.h  ReadMe.txt  UsbFilterListCtrl.cpp  UsbFilterListCtrl.h  resource.h  stdafx.cpp  stdafx.h
Apps/MfgTool.exe/: CProfileList.cpp  CProfileList.h  ConfigGeneralPage.cpp  ConfigGeneralPage.h  ConfigMgrSheet.cpp  ConfigMgrSheet.h  ConfigPlayerListCtrl.cpp  ConfigPlayerListCtrl.h  ConfigPlayerProfilePage.cpp  ConfigPlayerProfilePage.h  LogMgr.h  (+94 more)
Code Signing/: Build & Signing Instructions.msg  FreescaleCodeSigningCertificate.pfx  FreescaleCodeSigningCertificate.spc  MSCV-VSClass3.cer  myprivatekey.pvk
Common/: StDeviceDefs.h  StDeviceInfo.h  StSplashWnd.cpp  StSplashWnd.h  StdInt.h  StdString.h  scsidefs.h  updater_res.h  updater_restypes.h  wnaspi32.h
Customization/: default_cfg.h
Docs/: CustomizingTheFirmwareUpdater.doc  HowToUpdateFirmwareWithoutHostInstallerCN.doc  multilingual-updater-1.8xx.0.001.xls
MfgToolLib/: CFile.h  CMakeLists.txt  CMakeLists.txt.tmp  CString.cpp  CString.h  CallbackDef.h  CdcDevice.cpp  CdcDevice.h  CdcDeviceClass.cpp  CdcDeviceClass.h  ClassDiagram.cd  ClassDiagram1.cd  CmdOperation.cpp  CmdOperation.h  ConfigUSBPortDlg.cpp  ConfigUSBPortDlg.h  ControllerClass.cpp  ControllerClass.h  Device.cpp  Device.h  DeviceClass.cpp  DeviceClass.h  DeviceManager.cpp  DeviceManager.h  Disk.cpp  Disk.h  DiskDeviceClass.cpp  DiskDeviceClass.h  ExceptionHandle.cpp  ExceptionHandle.h  HidDevice.cpp  HidDevice.h  HidDeviceClass.cpp  HidDeviceClass.h  HubClass.cpp  HubClass.h  KblHidDeviceClass.cpp  KernelApi.cpp  KernelApi.h  LogMgr.cpp  (+66 more)
ProjectTest/: ProjectTest.sln
Resources/: stsearch.avi
TestPrgm/: Makefile  makecmd  mfgtoolCLI.cpp  soTest.cpp  test.cpp  ucl2.xml
libuuu/: CMakeLists.txt  backfile.h  bmap.cpp  bmap.h  buffer.cpp  buffer.h  cmd.cpp  cmd.h  conf.cpp  conf.h  config.cpp  config.h  error.cpp  fastboot.cpp  fastboot.h  fat.cpp  fat.h  ffu_format.h  gen_ver.sh  globals.cpp  hidreport.cpp  hidreport.h  http.cpp  http.h  libcomm.h  liberror.h  libuuu.h  notify.cpp  rominfo.cpp  rominfo.h  sdp.cpp  sdp.h  sdps.cpp  sdps.h  sparse.cpp  sparse.h  sparse_format.h  string_man.h  tar.cpp  tar.h  (+6 more)
libuuu/include/: libcomm.h  libuuu.h
msvc/: 0001-Static-link-C-library.patch  bzip2.vcxproj  bzip2.vcxproj.filters  createversion.bat  libuuu.filters  libuuu.vcxproj  libuuu.vcxproj.filters  tinyxml2.vcxproj  tinyxml2.vcxproj.filters  uuu-static-link.sln  uuu-static-link.vcxproj  uuu.sln  uuu.vcxproj  uuu.vcxproj.filters  zlib.vcxproj  zlib.vcxproj.filters
snap/: snapcraft.yaml
uuu/: CMakeLists.txt  HorizontalScrollingFormatter.h  Logger.h  Script.cpp  Script.h  ScriptCatalog.h  TransferFeedback.h  VtEmulation.h  autocomplete.cpp  autocomplete.h  buildincmd.cpp  buildincmd.h  cli.h  emmc_burn_all.lst  emmc_burn_loader.lst  environment.h  fat_write.lst  fspinand_burn_loader.lst  gen_txt_include.sh  logger.h  nand_burn_loader.lst  nvme_burn_all.lst  print_helpers.cpp  print_helpers.h  progress.h  qspi_burn_loader.lst  sd_burn_all.lst  sd_burn_loader.lst  spl_boot.lst  uuu.cpp  uuu.lst
webusb/: index.js  notes.txt  package.json
wrapper/: .gitignore  .pylintrc  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  build_backend.py  pyproject.toml  requirements.txt  requirements_dev.txt  vcpkg-configuration.json  vcpkg.json
wrapper/libuuu/: __init__.py  libuuu.py  misc.py
wrapper/tests/: __init__.py  test_basic.py
(+854 files in other folders)
